# ss25-topology-optimization

./: README.md  main.py  pyproject.toml  requirements.txt  test.py
ignore/: 01_generate_ct_recos.py  xML_TopOptFINAL_CreateDatasets.py
scripts/: 01_auto_generate_datasets.py
src/: input_utils.py
utils/: simp.py
