[project]
name = "ss25-topology-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
# GPU version. CPU is being handled by default
gpu = [
    "torch",
    "torchvision",
    "torchaudio",
]

[[tool.uv.index]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
# Tell uv: "If the 'gpu' extra is active, get torch from the GPU index"
torch = [
    { index = "pytorch_gpu", extra = "gpu" },
]
torchvision = [
    { index = "pytorch_gpu", extra = "gpu" },
]
torchaudio = [
    { index = "pytorch_gpu", extra = "gpu" },
]
